--- a/italie_projekt/index.html
+++ b/italie_projekt/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
-            <a class="navbar-brand" href="#">Itálie</a>
+            <a class="navbar-brand" href="/index.html">Itálie</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -37,7 +37,7 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Historie</a>
+                        <a class="nav-link" href="historie/index.html">Historie</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Zajímavosti</a>
